k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monorepo-app
  namespace: monorepo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: monorepo-app
  template:
    metadata:
      labels:
        app: monorepo-app
    spec:
      containers:
        - name: go-backend
          image: ariwijayaikd/test-monorepo:go-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
        - name: node-frontend
          image: ariwijayaikd/test-monorepo:node-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
