k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monorepo-ingress
  namespace: monorepo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ariwijayaikd.me
      secretName: monorepo-tls
  rules:
    - host: ariwijayaikd.me
      http:
        paths:
          - path: /go(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: monorepo-service
                port:
                  number: 8080
          - path: /node(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: monorepo-service
                port:
                  number: 3000
